Details are edit

--- a/profiles/henry-moore.html
+++ b/profiles/henry-moore.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="gallery">
                         <img src='../img/sculptures/henry-moore/two-piece-reclining-figure-points.png' width="300" height="200">
-                        <div class="desc">Art Piece: Two Piece Reclining Fİgure Points<br>Artist: Henry Moore
+                        <div class="desc">Art Piece: Two Piece Reclining Figure Points<br>Artist: Henry Moore
                             <div class="price">Price: 500$</div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
