--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -4,7 +4,6 @@
     <head>
         <link rel="stylesheet" type="text/css" href="../css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="../js/imageZoom.js"></script>
     </head>
     <body>
         <!--Navbar-->
@@ -50,15 +49,15 @@
                         <div class="desc">Art Piece: Mona Lisa<br>Artist: Leonardo Da Vinci
                             <div class="price">Price: 500$</div>
                              <!-- Trigger/Open The Modal -->
-                            <button id="myBtn" class="sendbtn">Details</button>
+                            <button class="sendbtn myBtn">Details</button>
                             <!-- The Modal -->
-                            <div id="myModal" class="modal">
+                            <div class="myModal modal">
                              <!-- Modal content -->
                                 <div class="modal-content">
                                 <span class="close">&times;</span>
-                                <h1 style="color: #1a1a1a">Mona Lisa</h1>
-                                <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height: 300px;" >
-                                <p><b>Dimensions</b>: 77 cm × 53 cm </p>
+                                <h1>Mona Lisa</h1>
+                                <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height:300px;">
+                                <p><b>Dimensions</b>: 77cm x 53cm </p>
                                 <p><b>Year</b>: 1506</p>
                                 <p><b>Type</b>: Oil and poplar panel</p>
                                 <p></p>
@@ -72,14 +71,14 @@
                         <div class="desc">Art Piece: Last Supper<br>Artist: Leonardo Da Vinci
                             <div class="price">Price: 100$</div>
                             <!-- Trigger/Open The Modal -->
-                            <button id="myBtn" class="sendbtn">Details</button>
+                            <button class="sendbtn myBtn">Details</button>
                             <!-- The Modal -->
-                            <div id="myModal" class="modal">
+                            <div class="modal myModal">
                              <!-- Modal content -->
                                 <div class="modal-content">
                                 <span class="close">&times;</span>
-                                <h1 style="color: #1a1a1a">Mona Lisa</h1>
-                                <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height: 300px;" >
+                                <h1>Mona Lisa</h1>
+                                <img src="../img/paintings/leanardo-da-vinci/last-supper.jpg" alt="" style="width:300px; height:300px;" >
                                 <p><b>Dimensions</b>: 77 cm × 53 cm </p>
                                 <p><b>Year</b>: 1506</p>
                                 <p><b>Type</b>: Oil and poplar panel</p>
