Scroll to about

--- a/profiles/aguste-rodin.html
+++ b/profiles/aguste-rodin.html
@@ -31,7 +31,7 @@
                         <a href="henry-moore.html">Henry Moore</a>
                     </div>
                 </div> 
-                <a style="float:right" href="#about">About</a>
+                <a style="float:right" href="#about" onclick="ScrollPage()" >About</a>
                 <a style="float:right" href="../sign.html">Sign In</a>
             </div>
             <!--Navbar ending-->
