--- a/login.html
+++ b/login.html
@@ -38,26 +38,29 @@
   </div>
   <!--Navbar ending--> 
   <div class="container">
-    <div id="registerinfo">
-      <p>Before you buy something, it will be more convinient to register the site
-        <br>
-        or if you have an account already you can login.
-      </p>
-    </div>
-       <form class="register" action="php/register.php" method="POST">
-          <h3>Register</h3>
-          <p>Name: <input type="text" name="name" required></p>
-          <p>Surname: <input type="text" name="surname" required></p>
-          <p>Username: <input type ="text" name="username" required></p>
-          <p>E-Mail: <input type="email" name="email" id="E-mail" onkeyup="check_email()" required></p>
-          <span id="verifyMessage" class="confirmMessage"></span>
-          <p>Password: <input type="password" name="password" id="password" required></p>
-          <p> Confirm Password:<input type="password" name="confirmPassword" id="confirmPassword" onkeyup="checkPass(); return false;" required></p>
-          <span id="confirmMessage" class="confirmMessage"></span>
-          <a href="login.html"><p>You already have an acount?</p></a>
-          <input class="sendbtn" name="registerSubmit" type="submit" value="Register">
-       </form>
-       
+        <div id="registerinfo">
+        <p>Before you buy something, it will be more convinient to register the site
+            <br>
+            or if you have an account already you can login.
+        </p>
+        </div>
+      <form class="login" action="php/login.php" method="POST">
+          <h3>Login</h3>
+          <p>Username: <input type ="text" name="username"></p>
+          <p>Password: <input type="password" name="password"></p>
+          <p>Remember me: <input type="checkbox" name="rememberMe"></p>
+          <input class="sendbtn" name="loginSubmit" type="submit" value="Login">
+          <input class="sendbtn" name="forgetPasswordSubmit" type="button" value="Forget Password" 
+          onclick="showForgetPasswordArea()">
+          <div id="hiddenDiv" hidden>
+                <form action="php/login.php" method="POST">
+                    <p id="enterYourEmail">Email: <input type="email" name="emailForForgotPassword" required> </p>
+                    <p id="enterYourUsername">Username: <input type="text" name="usernameForForgotPassword" required> </p>
+                    <p id="enterYourNewPassword">New Password: <input type="password" name="passwordForForgotPassword" required> </p>
+                    <br><input type="submit" name="forgotPasswordEmailSubmit" id="forgotPasswordEmailSubmit" class="sendbtn" value="Send"></p>
+                </form>
+          </div>
+        </form>
   </div>
 
     <!--Footer-->
@@ -73,5 +76,4 @@
 
 </body>
 </html>
-
 
