--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -48,19 +48,19 @@
                         <img src='../img/paintings/leanardo-da-vinci/mona-lisa.png' width="300" height="200">
                         <div class="desc">Art Piece: Mona Lisa<br>Artist: Leonardo Da Vinci
                             <div class="price">Price: 500$</div>
-                             <!-- Trigger/Open The Modal -->
+                            <!-- Trigger/Open The Modal -->
                             <button class="sendbtn myBtn">Details</button>
                             <!-- The Modal -->
                             <div class="myModal modal">
                              <!-- Modal content -->
                                 <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <h1>Mona Lisa</h1>
-                                <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height:300px;">
-                                <p><b>Dimensions</b>: 77cm x 53cm </p>
-                                <p><b>Year</b>: 1506</p>
-                                <p><b>Type</b>: Oil and poplar panel</p>
-                                <p></p>
+                                    <span class="close">&times;</span>
+                                    <h1>Mona Lisa</h1>
+                                    <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 77cm x 53cm </p>
+                                    <p><b>Year</b>: 1506</p>
+                                    <p><b>Type</b>: Oil and poplar panel</p>
+                                    <p></p>
                                 </div>
                             </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
@@ -73,16 +73,16 @@
                             <!-- Trigger/Open The Modal -->
                             <button class="sendbtn myBtn">Details</button>
                             <!-- The Modal -->
-                            <div class="modal myModal">
+                            <div class="myModal modal">
                              <!-- Modal content -->
                                 <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <h1>Mona Lisa</h1>
-                                <img src="../img/paintings/leanardo-da-vinci/last-supper.jpg" alt="" style="width:300px; height:300px;" >
-                                <p><b>Dimensions</b>: 77 cm × 53 cm </p>
-                                <p><b>Year</b>: 1506</p>
-                                <p><b>Type</b>: Oil and poplar panel</p>
-                                <p></p>
+                                    <span class="close">&times;</span>
+                                    <h1>Last Supper</h1>
+                                    <img src="../img/paintings/leanardo-da-vinci/last-supper.jpg" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 4,6m x 8,8m</p>
+                                    <p><b>Year</b>: 1495-1498</p>
+                                    <p><b>Type</b>: Tempera and Gesso</p>
+                                    <p></p>
                                 </div>
                             </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
@@ -92,6 +92,21 @@
                         <img src='../img/paintings/leanardo-da-vinci/lady-with-an-ermine.png' width="300" height="200">
                         <div class="desc">Art Piece: Lady With an Ermine<br>Artist: Leonardo Da Vinci
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Lady With an Ermine</h1>
+                                    <img src="../img/paintings/leanardo-da-vinci/lady-with-an-ermine.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>:54cm x 39cm</p>
+                                    <p><b>Year</b>:1489 - 1490</p>
+                                    <p><b>Type</b>: Oil paint</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -99,6 +114,21 @@
                         <img src='../img/paintings/leanardo-da-vinci/salvator-mundi.png' width="300" height="200">
                         <div class="desc">Art Piece: Salvator Mundi<br>Artist: Leonardo Da Vinci
                             <div class="price">Price: 95$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Salvator Mundi</h1>
+                                    <img src="../img/paintings/leanardo-da-vinci/salvator-mundi.png" alt="" style="width: 300px; height:300px;"">
+                                    <p><b>Dimensions</b>:66cm x 45cm</p>
+                                    <p><b>Year</b>: 1490 - 1500</p>
+                                    <p><b>Type</b>: Oil paint</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
