--- a/login.html
+++ b/login.html
@@ -54,9 +54,9 @@
           onclick="showForgetPasswordArea()">
           <div id="hiddenDiv" hidden>
                 <form action="php/login.php" method="POST">
-                    <p id="enterYourEmail">Email: <input type="email" name="emailForForgotPassword" required> </p>
-                    <p id="enterYourUsername">Username: <input type="text" name="usernameForForgotPassword" required> </p>
-                    <p id="enterYourNewPassword">New Password: <input type="password" name="passwordForForgotPassword" required> </p>
+                    <p id="enterYourEmail">Email: <input type="email" name="emailForForgotPassword"> </p>
+                    <p id="enterYourUsername">Username: <input type="text" name="usernameForForgotPassword"> </p>
+                    <p id="enterYourNewPassword">New Password: <input type="password" name="passwordForForgotPassword"> </p>
                     <br><input type="submit" name="forgotPasswordEmailSubmit" id="forgotPasswordEmailSubmit" class="sendbtn" value="Send"></p>
                 </form>
           </div>
