Painters modals are done

--- a/profiles/leonardo-da-vinci.html
+++ b/profiles/leonardo-da-vinci.html
@@ -57,7 +57,7 @@
                                     <span class="close">&times;</span>
                                     <h1>Mona Lisa</h1>
                                     <img src="../img/paintings/leanardo-da-vinci/mona-lisa.png" alt="" style="width: 300px; height:300px;">
-                                    <p><b>Dimensions</b>: 77cm x 53cm </p>
+                                    <p><b>Dimensions</b>: 77 cm x 53 cm </p>
                                     <p><b>Year</b>: 1506</p>
                                     <p><b>Type</b>: Oil and poplar panel</p>
                                     <p></p>
@@ -79,7 +79,7 @@
                                     <span class="close">&times;</span>
                                     <h1>Last Supper</h1>
                                     <img src="../img/paintings/leanardo-da-vinci/last-supper.jpg" alt="" style="width: 300px; height:300px;">
-                                    <p><b>Dimensions</b>: 4,6m x 8,8m</p>
+                                    <p><b>Dimensions</b>: 4,6 m x 8,8 m</p>
                                     <p><b>Year</b>: 1495-1498</p>
                                     <p><b>Type</b>: Tempera and Gesso</p>
                                     <p></p>
@@ -101,8 +101,8 @@
                                     <span class="close">&times;</span>
                                     <h1>Lady With an Ermine</h1>
                                     <img src="../img/paintings/leanardo-da-vinci/lady-with-an-ermine.png" alt="" style="width: 300px; height:300px;">
-                                    <p><b>Dimensions</b>:54cm x 39cm</p>
-                                    <p><b>Year</b>:1489 - 1490</p>
+                                    <p><b>Dimensions</b>: 54 cm x 39 cm</p>
+                                    <p><b>Year</b>: 1489 - 1490</p>
                                     <p><b>Type</b>: Oil paint</p>
                                     <p></p>
                                 </div>
@@ -122,8 +122,8 @@
                                 <div class="modal-content">
                                     <span class="close">&times;</span>
                                     <h1>Salvator Mundi</h1>
-                                    <img src="../img/paintings/leanardo-da-vinci/salvator-mundi.png" alt="" style="width: 300px; height:300px;"">
-                                    <p><b>Dimensions</b>:66cm x 45cm</p>
+                                    <img src="../img/paintings/leanardo-da-vinci/salvator-mundi.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>:66 cm x 45 cm</p>
                                     <p><b>Year</b>: 1490 - 1500</p>
                                     <p><b>Type</b>: Oil paint</p>
                                     <p></p>
