--- a/profiles/pablo-picasso.html
+++ b/profiles/pablo-picasso.html
@@ -48,6 +48,21 @@
                         <img src='../img/paintings/pablo-picasso/family-of-saltimbanques.jpg' width="300" height="200">
                         <div class="desc">Art Piece: Familiy of Saltimbanques<br>Artist: Pablo Picasso
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Familiy of Saltimbanques</h1>
+                                    <img src="../img/paintings/pablo-picasso/family-of-saltimbanques.jpg" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 212.8 cm x 229.6 cm</p>
+                                    <p><b>Year</b>: 1905</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/paintings/pablo-picasso/portrait-of-gertrude-stein.png' width="300" height="200">
                         <div class="desc">Art Piece: Portrait of Gertrude Stein<br>Artist: Pablo Picasso
                             <div class="price">Price: 300$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Portrait of Gertrude Stein</h1>
+                                    <img src="../img/paintings/pablo-picasso/portrait-of-gertrude-stein.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 100 cm x 81.3 cm</p>
+                                    <p><b>Year</b>: 1905-06</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/paintings/pablo-picasso/the-old-guitarist.png' width="300" height="200">
                         <div class="desc">Art Piece: The Old Guitarist<br>Artist: Pablo Picasso
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Old Guitarist</h1>
+                                    <img src="../img/paintings/pablo-picasso/the-old-guitarist.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 122.9 cm x 82.6 cm</p>
+                                    <p><b>Year</b>: 1903-04</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/paintings/pablo-picasso/the-weeping-woman.png' width="300" height="200">
                         <div class="desc">Art Piece: The Weeping Woman<br>Artist: Pablo Picasso
                             <div class="price">Price: 400$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Weeping Woman</h1>
+                                    <img src="../img/paintings/pablo-picasso/the-weeping-woman.png " alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 160 cm x 49 cm</p>
+                                    <p><b>Year</b>: 26 October 1937</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
