--- a/profiles/vincent-van-gogh.html
+++ b/profiles/vincent-van-gogh.html
@@ -48,6 +48,21 @@
                         <img src='../img/paintings/vincent-van-gogh/cafe-terrace-at-night.png' width="300" height="200">
                         <div class="desc">Art Piece: Cafe Terrace at Night<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Cafe Terrace at Night</h1>
+                                    <img src="../img/paintings/vincent-van-gogh/cafe-terrace-at-night.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 80.7 cm x 65.3 cm</p>
+                                    <p><b>Year</b>: 1888</p>
+                                    <p><b>Type</b>:	Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/paintings/vincent-van-gogh/self-portrait.png' width="300" height="200">
                         <div class="desc">Art Piece: Self Portrait<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Self Portrait</h1>
+                                    <img src="../img/paintings/vincent-van-gogh/self-portrait.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 65 cm x 54 cm</p>
+                                    <p><b>Year</b>: 1889</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/paintings/vincent-van-gogh/starry-night.png' width="300" height="200">
                         <div class="desc">Art Piece: Starry Night<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 350$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Starry Night</h1>
+                                    <img src="../img/paintings/vincent-van-gogh/starry-night.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 73.7 cm x 92.1 cm</p>
+                                    <p><b>Year</b>: 1889</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/paintings/vincent-van-gogh/wheatfield-with-crows.png' width="300" height="200">
                         <div class="desc">Art Piece: Wheatfield With Crows<br>Artist: Vincent Van Gogh
                             <div class="price">Price: 110$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Wheatfield With Crows</h1>
+                                    <img src="../img/paintings/vincent-van-gogh/wheatfield-with-crows.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 50.2 cm x 103 cm</p>
+                                    <p><b>Year</b>: July 1890</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
