--- a/profiles/salvador-dali.html
+++ b/profiles/salvador-dali.html
@@ -48,6 +48,21 @@
                         <img src='../img/paintings/salvador-dali/melting-watch.png' width="300" height="200">
                         <div class="desc">Art Piece: Melting Watch<br>Artist: Salvador Dali
                             <div class="price">Price: 300$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Melting Watch</h1>
+                                    <img src="../img/paintings/salvador-dali/melting-watch.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 24 cm x 33 cm</p>
+                                    <p><b>Year</b>: 1954</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/paintings/salvador-dali/reflecting-elephants.png' width="300" height="200">
                         <div class="desc">Art Piece: Reflecting Elephants<br>Artist: Salvador Dali
                             <div class="price">Price: 250$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Reflecting Elephants</h1>
+                                    <img src="../img/paintings/salvador-dali/reflecting-elephants.png" alt="" style="width:300px; height:300px;">
+                                    <p><b>Dimensions</b>: 51 cm x 77 cm</p>
+                                    <p><b>Year</b>: 1948</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/paintings/salvador-dali/the-burning-giraffe.png' width="300" height="200">
                         <div class="desc">Art Piece: The Burning Giraffe<br>Artist: Salvador Dali
                             <div class="price">Price: 95$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Burning Giraffe</h1>
+                                    <img src="../img/paintings/salvador-dali/the-burning-giraffe.png" alt="" style="width:300px; height:300px;">
+                                    <p><b>Dimensions</b>: 35 cm x 27 cm</p>
+                                    <p><b>Year</b>: 1937</p>
+                                    <p><b>Type</b>: Oil paint</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/paintings/salvador-dali/the-persistence-of-memory.jpg' width="300" height="200">
                         <div class="desc">Art Piece: The Persistence of Memory<br>Artist: Salvador Dali
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Persistence of Memory</h1>
+                                    <img src="../img/paintings/salvador-dali/the-persistence-of-memory.jpg" alt="" style="width:300px; height:300px;">
+                                    <p><b>Dimensions</b>: 24 cm x 33 cm</p>
+                                    <p><b>Year</b>: 1931</p>
+                                    <p><b>Type</b>: Oil on canvas</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
